[project]
name = "clanker-analytics"
version = "0.1.0"
description = "AI coding tool token analytics powered by DuckDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.0",
    "matplotlib>=3.9",
    "ccusage",
    "codex-cli-usage",
    "gemini-cli-usage",
]

[project.scripts]
clanker-analytics = "clanker_analytics.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
artifacts = ["src/clanker_analytics/*.ttf"]
